[package]
name = "bilingual"
version = "0.1.0"
edition = "2021"
exclude = ["assets", "examples", "benches", "tests", "CHANGELOG.md"]

[dependencies]
pulldown-cmark-to-cmark = "6"
arrayvec = "0.7"

[dependencies.pulldown-cmark]
version  = "0.8"
default-features = false

[dev-dependencies]
insta = "1.8"

[profile.release]
lto = true
opt-level = 3

[workspace]
members = ["translation-api-cn", "tests/pulldown-cmark"]
