[package]
name = "bilingual"
version = "0.1.0"
edition = "2021"
license = "MIT"
exclude = ["assets", "examples", "benches", "tests", "CHANGELOG.md", "bilingual.*"]
authors = ["zjp <jiping_zhou@foxmail.com>"]
repository  = "https://github.com/zjp-CN/bilingual"
categories  = ["command-line-utilities", "text-processing"]
description = "A cmdline tool used for markdown translation via calling Chinese translation api cloud services."

[dependencies]
pulldown-cmark-to-cmark = "6"
arrayvec = "0.7"
tl = "0.2.1"

reqwest = {version = "0.11", features = ["json", "blocking"], optional=true}
serde_json = {version = "1", optional = true}
anyhow = {version = "1.0", optional = true}
argh = {version = "0.1", optional = true}
translation-api-cn = {version="0.1.0", path="./translation-api-cn", optional = true}

serde = {version = "1", features = ["derive"], optional = true}
toml = {version = "0.5", optional = true}

log = {version = "0.4", optional = true}
simplelog = {version = "0.11", optional = true}

[dependencies.pulldown-cmark]
version  = "0.8"
default-features = false

[features]
bin = ["argh", "reqwest", "serde_json", "anyhow", "translation-api-cn", "serde", "toml", "log", "simplelog"]

[[bin]]
name = "bilingual"
required-features = ["bin"]

[dev-dependencies]
insta = "1.8"

[profile.release]
lto = true
opt-level = 3

[workspace]
members = ["translation-api-cn", "tests/pulldown-cmark"]
