[package]
name = "translation-api-cn"
version = "0.1.0"
edition = "2021"

[dependencies]
# reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
# serde_json = "1"
# thiserror = "1"

md5 = {version = "0.7", optional = true}
# nanorand = {version = "0.6", optional = true}

sha2 = {version = "0.9", optional = true}
hmac = {version = "0.11", optional = true}
chrono = {version = "0.4", optional = true}

[features]
default = ["baidu"]
baidu = ["md5"]
tencent = ["sha2", "hmac", "chrono"]

[dev-dependencies]
# tokio = {version = "1", features = ["rt", "rt-multi-thread", "macros"]}
reqwest = {version = "0.11", features = ["json", "blocking"]}
serde_json = "1"
argh = "0.1"
# nanorand = "0.6"
anyhow = "1"
insta = "1.8"
