[package]
name = "translation-api-cn"
version = "0.1.3"
edition = "2021"
license = "MIT"
readme  = "../README.md"
authors = ["zjp <jiping_zhou@foxmail.com>"]
exclude = ["assets", "examples", "benches", "tests", "*.log"]
categories  = ["api-bindings", "text-processing"]
repository  = "https://github.com/zjp-CN/bilingual"
description = "Some useful structs for calling Chinese translation api cloud services. A helper tool for `bilingual` cmdline tool."

[dependencies]
serde = {version = "1", features = ["derive"]}

md5 = {version = "0.7", optional = true}

sha2 = {version = "0.10", optional = true}
hmac = {version = "0.12", optional = true, features = ["std"]}
time = {version = "0.3", optional = true}
thiserror = {version = "1", optional = true}
serde_json = {version = "1", optional = true}

[features]
default = ["baidu", "tencent", "niutrans"]
baidu = ["md5"]
tencent = ["sha2", "hmac", "time", "serde_json", "thiserror"]
niutrans = []

[dev-dependencies]
reqwest = {version = "0.11", features = ["json", "blocking"]}
serde_json = "1"
argh = "0.1"
anyhow = "1"
insta = "1.8"
